<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BasicCashFlow</string>
    <string name="inserisci_denaro">Enter amount</string>
    <string name="inserisci_descrizione">Enter description</string>
    <string name="valore_non_nullo">Enter a value other than 0</string>
    <string name="saldo">Balance</string>
    <string name="confermi_eliminazione">Confirm deletion?</string>
    <string name="conferma">Confirm</string>
    <string name="valuta">Currency</string>
    <string name="elimina_transazioni">Delete all transactions</string>

    <string name="conferma_eliminazione">Confirm deletion</string>
    <string name="conferma_elim_trans_body">Confirm deleting all transactions?\n\nImpossible to undo!</string>
    <string name="annulla">Cancel</string>
    <string name="eliminazione_completata">Deletion completed</string>
    <string name="eliminazione_annullata">Deletion canceled</string>
    <string name="troppi_decimali">Too many decimals for the current currency</string>
    <string name="aggiungi_transazione">Add transaction</string>
    <string name="mostra_impostazioni">Show settings</string>
    <string name="salva">Save</string>
    <string name="desc_elimina_trans">Delete all transactions button</string>
    <string name="elimina_transazione">Delete transaction</string>
    <string name="modifica_transazione">Modify transaction</string>
    <string name="riavvio_necessario">Restart required</string>
    <string name="riavvio_msg">The app needs to be restarted for proper functioning.</string>
    <string name="copia_errore">Copy error</string>
    <string name="riavvia">Restart</string>
    <string name="errore_copiato">Error message copied to clipboard</string>
    <string name="impossibile_esportare">Unable to export</string>
    <string name="impossibile_importare">Unable to import</string>
    <string name="salva_backup">Save backup to device</string>
    <string name="carica_backup">Load backup from device</string>
    <string name="solo_un_momento">Just a moment…</string>
    <string name="backup_esportato">The backup has been exported successfully.</string>
    <string name="il_mio_conto">My account</string>
    <string name="database">Database</string>
    <string name="visualizzazione">View</string>
    <string name="forza_il_simbolo">Force the currency symbol after the amount</string>
    <string name="desc_carica_bkp">Click to load the backup from the device</string>
    <string name="desc_salva_bkp">Click to save the backup to the device</string>
    <string name="desc_forza_simbolo">Check to force the currency symbol to be displayed after the number</string>
    <string name="backup_importato">The backup has been imported successfully.</string>
    <string name="conferma_elim_acc_body">Do you confirm the deletion of the account and all transactions associated with it?  This cannot be undone!</string>
    <string name="saldo_parziale">Partial balance</string>
    <string name="nuovo_conto">New account</string>
    <string name="generic_error_text">Something went wrong…</string>
    <string name="find">Search…</string>
    <string name="seleziona_un_conto">Select an account</string>
    <string name="aggiungi_conto">Add account</string>
    <string name="mostra_opzioni_multi_conto">Show multi-account options</string>
    <string name="multi_conto_desc">Check to show options for managing multiple accounts</string>
    <string name="cerca_tra_le_transazioni">Search transactions</string>
    <string name="inserisci_il_nome_del_conto">Enter account name</string>
</resources>